--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-infobip",
   "version": "0.1.0",
-  "description": "",
+  "description": "n8n Node to send SMS via Infobip",
   "keywords": [
-    "n8n-community-node-package"
+    "n8n-community-node-package",
+    "sms",
+    "infobip"
   ],
   "license": "MIT",
   "homepage": "",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Yann Jouanique",
+    "email": "yann.jouanique@oneacrefund.org"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/one-acre-fund/n8n-nodes-infobip.git"
   },
   "main": "index.js",
   "scripts": {
@@ -30,16 +32,15 @@
   "n8n": {
     "n8nNodesApiVersion": 1,
     "credentials": [
-      "dist/credentials/ExampleCredentialsApi.credentials.js",
-      "dist/credentials/HttpBinApi.credentials.js"
+      "dist/credentials/InfobipApi.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/ExampleNode/ExampleNode.node.js",
-      "dist/nodes/HttpBin/HttpBin.node.js"
+      "dist/nodes/Infobip/Infobip.node.js"
     ]
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/lodash": "^4.14.185",
     "@types/request-promise-native": "~1.0.15",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint-plugin-n8n-nodes-base": "^1.5.4",
@@ -49,5 +50,8 @@
     "prettier": "^2.7.1",
     "tslint": "^6.1.2",
     "typescript": "~4.6.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
